<resources>
    <string name="app_name">MARKETİM</string>

    <!-- Orders UI text -->
    <string name="login_button">Giriş</string>
    <string name="logout_button">Çıkış Yap</string>
    <string name="orders_button">Siparişlerim</string>

    <!-- Login UI text -->
    <string name="user_name">Kullanıcı Adı</string>
    <string name="user_password">Şifre</string>
    <string name="remember_me">Beni Hatırla</string>

    <!-- Alert Message -->
    <string name="empty_message">Kullanıcı adı veya Şifre alanları boş olamaz.</string>
    <string name="incorrect_message">Kullanıcı adı veya Şifre hatalı.</string>
    <string name="logout_message">Çıkış yapmak istediğinize emin misiniz?</string>
    <string name="autologin_message">Kullanıcı bilgileriniz doğrulanamadı. Giriş Ekranına yönlendiriliyorsunuz.</string>
    <string name="error_message">Uygulamada bir hata tespit ettik. Tekrar Deneyin.</string>


    <!-- Alert Button text -->
    <string name="alert_yes">Evet</string>
    <string name="alert_ok">Tamam</string>
    <string name="alert_no">Hayır</string>
    <string name="alert_cancel">Çıkış</string>



</resources>
